RESOLVED FIXED195810
[iOS] Crash under -[TestRunnerWKWebView _didShowMenu] while running layout tests on iOS simulator
https://bugs.webkit.org/show_bug.cgi?id=195810
Summary [iOS] Crash under -[TestRunnerWKWebView _didShowMenu] while running layout te...
Wenson Hsieh
Reported 2019-03-15 11:49:45 PDT
Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 org.webkit.WebKitTestRunnerApp 0x000000010cf8a754 bool WTF::IdentityHashTranslator<WTF::HashMap<unsigned int, WTR::UIScriptContext::Task, WTF::IntHash<unsigned int>, WTF::HashTraits<unsigned int>, WTF::HashTraits<WTR::UIScriptContext::Task> >::KeyValuePairTraits, WTF::IntHash<unsigned int> >::equal<unsigned int, unsigned int>(unsigned int const&, unsigned int const&) + 20 (HashTable.h:285) 1 org.webkit.WebKitTestRunnerApp 0x000000010cf8c8ed bool WTF::HashMapTranslatorAdapter<WTF::HashMap<unsigned int, WTR::UIScriptContext::Task, WTF::IntHash<unsigned int>, WTF::HashTraits<unsigned int>, WTF::HashTraits<WTR::UIScriptContext::Task> >::KeyValuePairTraits, WTF::IdentityHashTranslator<WTF::HashMap<unsigned int, WTR::UIScriptContext::Task, WTF::IntHash<unsigned int>, WTF::HashTraits<unsigned int>, WTF::HashTraits<WTR::UIScriptContext::Task> >::KeyValuePairTraits, WTF::IntHash<unsigned int> > >::equal<unsigned int, unsigned int>(unsigned int const&, unsigned int const&) + 29 (HashMap.h:215) 2 org.webkit.WebKitTestRunnerApp 0x000000010cf8c6f2 WTF::KeyValuePair<unsigned int, WTR::UIScriptContext::Task>* WTF::HashTable<unsigned int, WTF::KeyValuePair<unsigned int, WTR::UIScriptContext::Task>, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<unsigned int, WTR::UIScriptContext::Task> >, WTF::IntHash<unsigned int>, WTF::HashMap<unsigned int, WTR::UIScriptContext::Task, WTF::IntHash<unsigned int>, WTF::HashTraits<unsigned int>, WTF::HashTraits<WTR::UIScriptContext::Task> >::KeyValuePairTraits, WTF::HashTraits<unsigned int> >::inlineLookup<WTF::HashMapTranslatorAdapter<WTF::HashMap<unsigned int, WTR::UIScriptContext::Task, WTF::IntHash<unsigned int>, WTF::HashTraits<unsigned int>, WTF::HashTraits<WTR::UIScriptContext::Task> >::KeyValuePairTraits, WTF::IdentityHashTranslator<WTF::HashMap<unsigned int, WTR::UIScriptContext::Task, WTF::IntHash<unsigned int>, WTF::HashTraits<unsigned int>, WTF::HashTraits<WTR::UIScriptContext::Task> >::KeyValuePairTraits, WTF::IntHash<unsigned int> > >, unsigned int>(unsigned int const&) + 162 (HashTable.h:651) 3 org.webkit.WebKitTestRunnerApp 0x000000010cf8c5fd WTF::KeyValuePair<unsigned int, WTR::UIScriptContext::Task>* WTF::HashTable<unsigned int, WTF::KeyValuePair<unsigned int, WTR::UIScriptContext::Task>, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<unsigned int, WTR::UIScriptContext::Task> >, WTF::IntHash<unsigned int>, WTF::HashMap<unsigned int, WTR::UIScriptContext::Task, WTF::IntHash<unsigned int>, WTF::HashTraits<unsigned int>, WTF::HashTraits<WTR::UIScriptContext::Task> >::KeyValuePairTraits, WTF::HashTraits<unsigned int> >::lookup<WTF::HashMapTranslatorAdapter<WTF::HashMap<unsigned int, WTR::UIScriptContext::Task, WTF::IntHash<unsigned int>, WTF::HashTraits<unsigned int>, WTF::HashTraits<WTR::UIScriptContext::Task> >::KeyValuePairTraits, WTF::IdentityHashTranslator<WTF::HashMap<unsigned int, WTR::UIScriptContext::Task, WTF::IntHash<unsigned int>, WTF::HashTraits<unsigned int>, WTF::HashTraits<WTR::UIScriptContext::Task> >::KeyValuePairTraits, WTF::IntHash<unsigned int> > >, unsigned int>(unsigned int const&) + 29 (HashTable.h:619) 4 org.webkit.WebKitTestRunnerApp 0x000000010cf8c56d WTR::UIScriptContext::Task WTF::HashMap<unsigned int, WTR::UIScriptContext::Task, WTF::IntHash<unsigned int>, WTF::HashTraits<unsigned int>, WTF::HashTraits<WTR::UIScriptContext::Task> >::get<WTF::IdentityHashTranslator<WTF::HashMap<unsigned int, WTR::UIScriptContext::Task, WTF::IntHash<unsigned int>, WTF::HashTraits<unsigned int>, WTF::HashTraits<WTR::UIScriptContext::Task> >::KeyValuePairTraits, WTF::IntHash<unsigned int> >, unsigned int>(unsigned int const&) const + 29 (HashMap.h:309) 5 org.webkit.WebKitTestRunnerApp 0x000000010cf8811d WTF::HashMap<unsigned int, WTR::UIScriptContext::Task, WTF::IntHash<unsigned int>, WTF::HashTraits<unsigned int>, WTF::HashTraits<WTR::UIScriptContext::Task> >::get(unsigned int const&) const + 29 (HashMap.h:424) 6 org.webkit.WebKitTestRunnerApp 0x000000010cf8816a WTR::UIScriptContext::fireCallback(unsigned int) + 42 (UIScriptContext.cpp:143) 7 org.webkit.WebKitTestRunnerApp 0x000000010cf96a7d invocation function for block in WTR::UIScriptController::platformSetDidShowMenuCallback() + 61 (UIScriptControllerIOS.mm:873) 8 org.webkit.WebKitTestRunnerApp 0x000000010cf86192 -[TestRunnerWKWebView _didShowMenu] + 146 (TestRunnerWKWebView.mm:185) 9 com.apple.CoreFoundation 0x00000001139f1f6c __CFNOTIFICATIONCENTER_IS_CALLING_OUT_TO_AN_OBSERVER__ + 12 10 com.apple.CoreFoundation 0x00000001139f1409 _CFXRegistrationPost1 + 457 11 com.apple.CoreFoundation 0x00000001139f1148 ___CFXNotificationPost_block_invoke + 184 12 com.apple.CoreFoundation 0x0000000113af7793 -[_CFXNotificationRegistrar find:object:observer:enumerator:] + 1811 13 com.apple.CoreFoundation 0x00000001139f0ac5 _CFXNotificationPost + 965 14 com.apple.Foundation 0x00000001131431a7 -[NSNotificationCenter postNotificationName:object:userInfo:] + 59 15 com.apple.UIKitCore 0x00000001383ed6da -[UIMenuController(UICalloutBarDelegateConformance) calloutBar:didFinishAnimation:] + 329 16 com.apple.UIKitCore 0x00000001380b41d7 -[UICalloutBar appearAnimationDidStopWithContext:] + 153 17 com.apple.UIKitCore 0x00000001380b3b6f -[UICalloutBar _endOngoingAppearOrFadeAnimations] + 124 18 com.apple.UIKitCore 0x00000001380b3fb3 -[UICalloutBar hide] + 102 19 com.apple.UIKitCore 0x00000001383ec870 -[UIMenuController _hideMenuAnimated:] + 105 20 org.webkit.WebKitTestRunnerApp 0x000000010cf2da04 WTR::TestController::platformResetStateToConsistentValues(WTR::TestOptions const&) + 100 (TestControllerIOS.mm:139) 21 org.webkit.WebKitTestRunnerApp 0x000000010cf41ca9 WTR::TestController::resetStateToConsistentValues(WTR::TestOptions const&, WTR::TestController::ResetStage) + 1945 (TestController.cpp:975)
Attachments
Patch (5.67 KB, patch)
2019-03-15 13:17 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2019-03-15 13:17:59 PDT
WebKit Commit Bot
Comment 2 2019-03-15 16:09:45 PDT
Comment on attachment 364827 [details] Patch Clearing flags on attachment: 364827 Committed r243021: <https://trac.webkit.org/changeset/243021>
WebKit Commit Bot
Comment 3 2019-03-15 16:09:47 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2019-03-15 16:10:37 PDT
Note You need to log in before you can comment on or make changes to this bug.